--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "jsx": "react",
-    "target": "es5"
+    "target": "es5",
+    "lib": ["es5", "es6", "dom"]
   },
   "include": [
       "src/**/*"
