--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^4.11.1",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router-dom": "^4.2.3",
     "awesome-typescript-loader": "^3.4.1",
     "nodemon": "^1.14.12",
     "npm-run-all": "^4.1.2",
@@ -21,7 +22,10 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "material-ui": "next",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-tap-event-plugin": "^3.0.2"
   }
 }
