--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "dev": "npm-run-all -p dev-server watch-client-js"
   },
   "devDependencies": {
+    "@types/auth0-js": "^8.11.2",
     "@types/express": "^4.11.1",
+    "@types/passport": "^0.4.3",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-router-dom": "^4.2.3",
+    "auth0-js": "^9.3.3",
     "awesome-typescript-loader": "^3.4.1",
     "nodemon": "^1.14.12",
     "npm-run-all": "^4.1.2",
@@ -24,6 +27,8 @@
     "express": "^4.16.2",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.17",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
