--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-router-dom": "^4.2.3",
+    "@types/sequelize": "^4.27.10",
     "auth0-js": "^9.3.3",
     "awesome-typescript-loader": "^3.4.1",
     "nodemon": "^1.14.12",
@@ -32,6 +33,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^3.0.2"
+    "react-tap-event-plugin": "^3.0.2",
+    "sequelize": "^4.36.0"
   }
 }
