--- a/server/db/.eslintrc
+++ b/server/db/.eslintrc
@@ -4,7 +4,6 @@
         "node": true
     },
     "extends": "eslint:recommended",
-    "installedESLint": true,
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "script"
@@ -18,15 +17,9 @@
             "error",
             "unix"
         ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ],
-        "curly": ["error", "multi", "consistent"],
+        "quotes": "off",
+        "semi": "off",
+        "curly": "off",
         "dot-location": ["error", "property"],
         "eqeqeq": "error",
         "no-eq-null": "error",
@@ -35,15 +28,16 @@
         "no-implicit-coercion": "error",
         "no-useless-concat": "warn",
         "no-useless-escape": "warn",
-        "block-spacing": "warn",
-        "brace-style": "warn",
-        "camelcase": "warn",
+        "block-spacing": "off",
+        "brace-style": "off",
+        "camelcase": "off",
         "comma-spacing": "warn",
         "spaced-comment": "warn",
         "no-const-assign": "error",
-        "no-var": "error",
-        "prefer-const": "error",
+        "no-var": "off",
+        "prefer-const": "off",
         "template-curly-spacing": ["warn", "never"],
-        "no-console": "off"
+        "no-console": "off",
+        "no-unused-vars": "off"
     }
 }
