--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "@types/sequelize": "^4.27.10",
     "auth0-js": "^9.3.3",
     "awesome-typescript-loader": "^3.4.1",
+    "eslint": "^4.18.2",
+    "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.17",
     "nodemon": "^1.14.12",
     "npm-run-all": "^4.1.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-tap-event-plugin": "^3.0.2",
     "typescript": "^2.7.1",
     "webpack": "^3.11.0"
   },
   "dependencies": {
     "express": "^4.16.2",
-    "material-ui": "next",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^3.0.2",
-    "sequelize": "^4.36.0"
+    "sequelize": "^4.36.0",
+    "sqlite3": "^3.1.13"
   }
 }
