--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build-server-js": "tsc -p server",
+    "build-server-js": "copyfiles -f ./server/src/db/config.json ./server/dist/db && tsc -p server",
     "watch-server-js": "yarn build-server-js -- -w",
     "start-server": "node server/dist/index.js",
     "start-server-autoreload": "nodemon server/dist/index.js -w server/dist",
@@ -11,14 +11,16 @@
   },
   "devDependencies": {
     "@types/auth0-js": "^8.11.2",
+    "@types/cors": "^2.8.3",
+    "@types/debug": "^0.0.30",
     "@types/express": "^4.11.1",
-    "@types/passport": "^0.4.3",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-router-dom": "^4.2.3",
     "@types/sequelize": "^4.27.10",
     "auth0-js": "^9.3.3",
     "awesome-typescript-loader": "^3.4.1",
+    "copyfiles": "^2.0.0",
     "eslint": "^4.18.2",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -32,7 +34,12 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.2.1",
     "sequelize": "^4.36.0",
     "sqlite3": "^3.1.13"
   }
