--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/auth0-js": "^8.11.2",
+    "@types/bcrypt": "^1.0.0",
     "@types/cors": "^2.8.3",
     "@types/debug": "^0.0.30",
     "@types/express": "^4.11.1",
