--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.3",
     "@types/debug": "^0.0.30",
     "@types/express": "^4.11.1",
+    "@types/express-session": "^1.15.8",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "@types/react-router-dom": "^4.2.3",
@@ -37,9 +38,11 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "connect-session-sequelize": "^5.2.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
     "jwks-rsa": "^1.2.1",
     "sequelize": "^4.36.0",
     "sqlite3": "^3.1.13"
