--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^1.0.0-beta.43",
     "@types/auth0-js": "^8.11.2",
     "@types/bcrypt": "^1.0.0",
+    "@types/bcryptjs": "^2.4.1",
     "@types/cors": "^2.8.3",
     "@types/debug": "^0.0.30",
     "@types/express": "^4.11.1",
@@ -26,6 +27,7 @@
     "copyfiles": "^2.0.0",
     "eslint": "^4.18.2",
     "material-ui": "^1.0.0-beta.44",
+    "material-ui-pickers": "^1.0.0-rc.7",
     "nodemon": "^1.14.12",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
@@ -36,7 +38,7 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
-    "bcrypt": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-session-sequelize": "^5.2.1",
     "cors": "^2.8.4",
@@ -45,7 +47,6 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "jwks-rsa": "^1.2.1",
-    "material-ui-pickers": "^1.0.0-rc.7",
     "sequelize": "^4.36.0",
     "sqlite3": "^3.1.13"
   }
