--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^4.18.2",
     "material-ui": "^1.0.0-beta.44",
     "material-ui-pickers": "^1.0.0-rc.7",
+    "moment": "^2.22.2",
     "nodemon": "^1.14.12",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
