--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "jwks-rsa": "^1.2.1",
+    "material-ui-icons": "^1.0.0-beta.36",
     "sequelize": "^4.36.0",
     "sqlite3": "^3.1.13"
   }
