--- a/package.json
+++ b/package.json
@@ -10,45 +10,44 @@
     "dev": "npm-run-all -p dev-server watch-client-js"
   },
   "devDependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "@types/auth0-js": "^8.11.2",
+    "@material-ui/core": "^3.3.0",
+    "@material-ui/icons": "^3.0.1",
+    "@types/auth0-js": "^8.11.6",
     "@types/bcrypt": "^1.0.0",
     "@types/bcryptjs": "^2.4.1",
     "@types/cors": "^2.8.3",
     "@types/debug": "^0.0.30",
     "@types/express": "^4.11.1",
     "@types/express-session": "^1.15.8",
-    "@types/react": "^16.0.36",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-router-dom": "^4.2.3",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-router-dom": "^4.3.1",
     "@types/sequelize": "^4.27.10",
-    "auth0-js": "^9.3.3",
-    "awesome-typescript-loader": "^3.4.1",
-    "copyfiles": "^2.0.0",
-    "eslint": "^4.18.2",
-    "material-ui": "^1.0.0-beta.44",
-    "material-ui-pickers": "^1.0.0-rc.7",
+    "auth0-js": "^9.8.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "copyfiles": "^2.1.0",
+    "eslint": "^5.7.0",
+    "material-ui-pickers": "1.0.0-rc.17",
     "moment": "^2.22.2",
-    "nodemon": "^1.14.12",
-    "npm-run-all": "^4.1.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-tap-event-plugin": "^3.0.2",
-    "typescript": "^2.7.1",
-    "webpack": "^3.11.0"
+    "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
+    "typescript": "^3.1.3",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-session-sequelize": "^5.2.1",
     "cors": "^2.8.4",
-    "date-fns": "^2.0.0-alpha.7",
+    "date-fns": "^2.0.0-alpha.16",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "jwks-rsa": "^1.2.1",
-    "material-ui-icons": "^1.0.0-beta.36",
     "sequelize": "^4.36.0",
     "sqlite3": "^3.1.13"
   }
