--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/sequelize": "^4.27.10",
     "auth0-js": "^9.8.1",
-    "awesome-typescript-loader": "^5.2.1",
     "copyfiles": "^2.1.0",
     "eslint": "^5.7.0",
     "file-loader": "^2.0.0",
@@ -35,6 +34,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "ts-loader": "^5.3.2",
     "typescript": "^3.1.3",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
