--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-number-format": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "ts-loader": "^5.3.2",
     "typescript": "^3.1.3",
