[Client] Enable strict checks

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,8 @@
     "jsx": "react",
     "target": "es5",
     "lib": ["es5", "es6", "dom"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strictNullChecks": true
   },
   "include": [
       "src/**/*"
