--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "npm-run-all -p dev-server watch-client-js"
   },
   "devDependencies": {
+    "@date-io/moment": "^1.0.1",
     "@material-ui/core": "^3.3.0",
     "@material-ui/icons": "^3.0.1",
     "@types/auth0-js": "^8.11.6",
@@ -28,7 +29,7 @@
     "eslint": "^5.7.0",
     "file-loader": "^2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
-    "material-ui-pickers": "1.0.0-rc.17",
+    "material-ui-pickers": "^2.1.1",
     "moment": "^2.22.2",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
@@ -46,7 +47,6 @@
     "body-parser": "^1.18.2",
     "connect-session-sequelize": "^6.0.0",
     "cors": "^2.8.4",
-    "date-fns": "^2.0.0-alpha.16",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
