[Client] Mess caused by not commiting on each step
The features implemented by these few commits was very experimental

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,10 +3,12 @@
   "compilerOptions": {
     "outDir": "dist",
     "jsx": "react",
-    "target": "es5",
+    "target": "esNext",
     "lib": ["es5", "es6", "dom"],
     "skipLibCheck": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "module": "ESNext",
+    "moduleResolution": "Node"
   },
   "include": [
       "src/**/*"
