--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "html-webpack-plugin": "^3.2.0",
     "material-ui-pickers": "^2.1.1",
+    "moment-locales-webpack-plugin": "^1.0.7",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.2",
