[Server] Update sequelize, use new sequelize typings

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^3.0.1",
     "@types/auth0-js": "^8.11.6",
     "@types/bcryptjs": "^2.4.1",
+    "@types/bluebird": "^3.5.26",
     "@types/compression": "^0.0.36",
     "@types/cors": "^2.8.3",
     "@types/debug": "^0.0.31",
@@ -27,7 +28,7 @@
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
-    "@types/sequelize": "^4.27.10",
+    "@types/validator": "^10.11.0",
     "auth0-js": "^9.8.1",
     "clean-webpack-plugin": "^1.0.1",
     "copyfiles": "^2.1.0",
@@ -53,15 +54,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "compression": "^1.7.3",
+    "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
-    "express-session": "^1.15.6",
-    "jwks-rsa": "^1.2.1",
+    "express-session": "^1.16.1",
+    "jwks-rsa": "^1.4.0",
     "moment": "^2.22.2",
-    "sequelize": "^4.36.0",
+    "sequelize": "^5.7.1",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.4"
   }
