--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "material-ui-flat-pagination": "^3.2.0",
     "material-ui-pickers": "^2.2.4",
     "moment-locales-webpack-plugin": "^1.0.7",
     "nodemon": "^1.19.0",
