--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
     "migrate-prod": "sequelize db:migrate --env production"
   },
   "devDependencies": {
-    "@date-io/moment": "^1.3.5",
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.1",
-    "@types/auth0-js": "^9.10.2",
+    "@date-io/moment": "^1.3.11",
+    "@material-ui/core": "^4.4.1",
+    "@material-ui/icons": "^4.4.1",
+    "@material-ui/pickers": "^3.2.5",
+    "@types/auth0-js": "^9.10.6",
     "@types/bcryptjs": "^2.4.1",
-    "@types/bluebird": "^3.5.26",
+    "@types/bluebird": "^3.5.27",
     "@types/compression": "^0.0.36",
-    "@types/cors": "^2.8.5",
-    "@types/debug": "^4.1.4",
+    "@types/cors": "^2.8.6",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.11.1",
-    "@types/express-session": "^1.15.12",
-    "@types/react": "^16.8.16",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.2",
-    "@types/validator": "^10.11.0",
+    "@types/express-session": "^1.15.14",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/validator": "^10.11.3",
     "auth0-js": "^9.10.2",
     "clean-webpack-plugin": "^2.0.1",
-    "copyfiles": "^2.1.0",
+    "copyfiles": "^2.1.1",
     "eslint": "^5.16.0",
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
-    "material-ui-flat-pagination": "^3.2.0",
-    "material-ui-pickers": "^2.2.4",
+    "material-ui-flat-pagination": "^4.0.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "nodemon": "^1.19.0",
     "npm-run-all": "^4.1.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-number-format": "^4.0.7",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "ts-loader": "^5.4.5",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-cli": "^3.3.8",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -60,7 +60,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-jwt": "^5.3.1",
-    "express-session": "^1.16.1",
+    "express-session": "^1.16.2",
     "jwks-rsa": "^1.4.0",
     "moment": "^2.22.2",
     "sequelize": "^5.8.5",
