[Client] Update react-router-dom

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/express-session": "^1.15.14",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.0",
     "@types/validator": "^10.11.3",
     "auth0-js": "^9.10.2",
     "clean-webpack-plugin": "^2.0.1",
@@ -44,7 +44,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-number-format": "^4.0.7",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "ts-loader": "^5.4.5",
     "typescript": "^3.4.5",
     "webpack": "^4.30.0",
@@ -55,6 +55,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "clsx": "^1.0.4",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "cors": "^2.8.4",
