--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "sequelize": "^5.21.1",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0"
+  },
+  "resolutions": {
+    "@types/react": "^16.9.9"
   }
 }
