--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.15",
+    "@types/node": "^12.11.2",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-router-dom": "^5.1.0",
