--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
@@ -65,6 +66,7 @@
     "express-session": "^1.17.0",
     "jwks-rsa": "^1.6.0",
     "moment": "^2.22.2",
+    "react-router": "^5.1.2",
     "sequelize": "^5.21.1",
     "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0"
