--- a/package.json
+++ b/package.json
@@ -26,27 +26,28 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.1",
     "@types/express-session": "^1.15.15",
-    "@types/node": "^12.11.2",
-    "@types/react": "^16.9.9",
-    "@types/react-dom": "^16.9.2",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-router": "^5.1.2",
     "@types/react-router-dom": "^5.1.0",
     "@types/validator": "^10.11.3",
     "auth0-js": "^9.11.3",
     "clean-webpack-plugin": "^3.0.0",
     "copyfiles": "^2.1.1",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.1",
+    "fork-ts-checker-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "material-ui-flat-pagination": "^4.0.0",
     "moment-locales-webpack-plugin": "^1.1.0",
     "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.3",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-number-format": "^4.3.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-number-format": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "ts-loader": "^6.2.0",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
@@ -54,7 +55,6 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@types/react-router": "^5.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
@@ -72,6 +72,9 @@
     "sqlite3": "^4.1.0"
   },
   "resolutions": {
-    "@types/react": "^16.9.9"
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-router": "^5.1.2",
+    "@types/react-router-dom": "^5.1.0"
   }
 }
