--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
+    "formik": "^2.0.6",
     "jwks-rsa": "^1.6.0",
     "moment": "^2.22.2",
     "react-router": "^5.1.2",
