--- a/package.json
+++ b/package.json
@@ -14,44 +14,44 @@
     "migrate-prod": "sequelize db:migrate --env production"
   },
   "devDependencies": {
-    "@date-io/moment": "^1.3.11",
-    "@material-ui/core": "^4.5.1",
+    "@date-io/moment": "^1.3.13",
+    "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/pickers": "^3.2.7",
-    "@types/auth0-js": "^9.10.6",
+    "@material-ui/pickers": "^3.2.8",
+    "@types/auth0-js": "^9.10.7",
     "@types/bcryptjs": "^2.4.1",
-    "@types/bluebird": "^3.5.28",
+    "@types/bluebird": "^3.5.29",
     "@types/compression": "^1.0.1",
     "@types/cors": "^2.8.6",
     "@types/debug": "^4.1.5",
-    "@types/express": "^4.17.1",
-    "@types/express-session": "^1.15.15",
-    "@types/node": "^12.11.7",
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
-    "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/express": "4.17.1",
+    "@types/express-session": "^1.15.16",
+    "@types/node": "^12.12.17",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router": "^5.1.3",
+    "@types/react-router-dom": "^5.1.3",
     "@types/validator": "^10.11.3",
-    "auth0-js": "^9.11.3",
+    "auth0-js": "^9.12.0",
     "clean-webpack-plugin": "^3.0.0",
     "copyfiles": "^2.1.1",
-    "eslint": "^6.6.0",
-    "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^2.0.0",
+    "eslint": "^6.7.2",
+    "file-loader": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
     "material-ui-flat-pagination": "^4.0.0",
-    "moment-locales-webpack-plugin": "^1.1.0",
-    "nodemon": "^1.19.4",
+    "moment-locales-webpack-plugin": "^1.1.2",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-number-format": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.6.4",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
@@ -64,18 +64,19 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
-    "formik": "^2.0.6",
+    "formik": "^2.0.8",
     "jwks-rsa": "^1.6.0",
     "moment": "^2.22.2",
     "react-router": "^5.1.2",
-    "sequelize": "^5.21.1",
+    "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.1"
   },
   "resolutions": {
-    "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
-    "@types/react-router": "^5.1.2",
-    "@types/react-router-dom": "^5.1.0"
-  }
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router": "^5.1.3",
+    "@types/react-router-dom": "^5.1.3"
+  },
+  "license": "MIT"
 }
