--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@types/yup": "^0.26.28",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
@@ -70,7 +71,8 @@
     "react-router": "^5.1.2",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "yup": "^0.28.0"
   },
   "resolutions": {
     "@types/react": "^16.9.16",
