--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "@types/yup": "^0.26.28",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -71,6 +73,8 @@
     "react-router": "^5.1.2",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "sqlite3": "^4.1.1",
     "yup": "^0.28.0"
   },
