--- a/server/src/db/config.json
+++ b/server/src/db/config.json
@@ -1,14 +1,17 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "db.sqlite"
+    "storage": "db.sqlite",
+    "logQueryParameters": true
   },
   "test": {
     "dialect": "sqlite",
-    "storage": "test-db.sqlite"
+    "storage": "test-db.sqlite",
+    "logQueryParameters": true
   },
   "production": {
     "dialect": "sqlite",
-    "storage": "db.sqlite"
+    "storage": "db.sqlite",
+    "logQueryParameters": true
   }
 }
