--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "npm-run-all -p dev-server watch-client-js",
     "analyze": "webpack-bundle-analyzer ./client/stats.json",
     "migrate": "sequelize db:migrate",
-    "migrate-prod": "sequelize db:migrate --env production"
+    "migrate-prod": "sequelize db:migrate --env production",
+    "pretest": "sequelize db:migrate --env test",
+    "test": "jest"
   },
   "devDependencies": {
     "@date-io/moment": "^1.3.13",
@@ -26,27 +28,36 @@
     "@types/debug": "^4.1.5",
     "@types/express": "4.17.6",
     "@types/express-session": "^1.17.0",
+    "@types/faker": "^4.1.12",
+    "@types/jest": "^26.0.3",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.4",
     "@types/validator": "^13.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "auth0-js": "^9.13.2",
     "clean-webpack-plugin": "^3.0.0",
     "copyfiles": "^2.2.0",
     "eslint": "^6.8.0",
+    "faker": "^4.1.0",
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "html-webpack-plugin": "^4.2.0",
+    "jest": "^26.1.0",
+    "jest-extended": "^0.11.5",
     "material-ui-flat-pagination": "^4.1.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.3",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.1.2",
+    "ts-jest": "^26.1.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
