--- a/server/src/db/migrations/.eslintrc
+++ b/server/src/db/migrations/.eslintrc
@@ -1,7 +1,8 @@
 {
     "env": {
         "commonjs": true,
-        "node": true
+        "node": true,
+        "es6": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
@@ -17,8 +18,8 @@
             "error",
             "unix"
         ],
-        "quotes": "off",
-        "semi": "off",
+        "quotes": ["error", "single"],
+        "semi": ["error", "never"],
         "curly": "off",
         "dot-location": ["error", "property"],
         "eqeqeq": "error",
