--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,8 @@
         "spaced-comment": "error",
         "no-const-assign": "error",
         "no-var": "error",
-        "no-unused-vars": ["error", { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }],
         "no-console": "off",
         "prefer-const": "error",
 
@@ -55,7 +56,7 @@
             "tabWidth": 2,
             "comments": 80,
             "ignoreComments": false,
-            "ignorePattern": "^\\s+*\\s+@",
+            "ignorePattern": "^\\s+\\*\\s+@",
             "ignoreTrailingComments": true,
             "ignoreStrings": true,
             "ignoreUrls": true,
