--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "analyze": "webpack-bundle-analyzer ./client/stats.json",
     "migrate": "sequelize db:migrate",
     "migrate-prod": "sequelize db:migrate --env production",
-    "pretest": "sequelize db:migrate --env test",
-    "test": "jest"
+    "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@date-io/moment": "^1.3.13",
@@ -35,6 +36,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.4",
+    "@types/supertest": "^2.0.9",
     "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
@@ -57,6 +59,7 @@
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.1.2",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
