--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copyfiles": "^2.2.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.17.1",
     "faker": "^4.1.0",
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
