--- a/package.json
+++ b/package.json
@@ -1,20 +1,44 @@
 {
+  "license": "MIT",
   "scripts": {
-    "build-server-js": "copyfiles -f ./server/src/db/config.json ./server/dist/db && tsc -p server",
-    "watch-server-js": "yarn build-server-js -w",
-    "start-server": "node server/dist/index.js",
-    "start-server-autoreload": "nodemon server/dist/index.js -w server/dist",
-    "dev-server": "npm-run-all -p watch-server-js start-server-autoreload",
-    "build-client-dev": "webpack --config client/webpack.dev.js",
-    "build": "webpack --config client/webpack.prod.js",
-    "watch-client-js": "yarn build-client-dev -w",
-    "dev": "npm-run-all -p dev-server watch-client-js",
     "analyze": "webpack-bundle-analyzer ./client/stats.json",
+    "build": "webpack --config client/webpack.prod.js",
+    "build-client-dev": "webpack --config client/webpack.dev.js",
+    "build-server-js": "copyfiles -f ./server/src/db/config.json ./server/dist/db && tsc -p server",
+    "dev": "npm-run-all -p dev-server watch-client-js",
+    "dev-server": "npm-run-all -p watch-server-js start-server-autoreload",
+    "lint": "eslint .",
     "migrate": "sequelize db:migrate",
     "migrate-prod": "sequelize db:migrate --env production",
+    "start-server": "node server/dist/index.js",
+    "start-server-autoreload": "nodemon server/dist/index.js -w server/dist",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
     "test": "jest",
-    "lint": "eslint ."
+    "watch-client-js": "yarn build-client-dev -w",
+    "watch-server-js": "yarn build-server-js -w"
+  },
+  "resolutions": {
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router": "^5.1.3",
+    "@types/react-router-dom": "^5.1.3"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "connect-session-sequelize": "^6.1.1",
+    "cors": "^2.8.4",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
+    "express-session": "^1.17.0",
+    "jwks-rsa": "^1.7.0",
+    "moment": "^2.22.2",
+    "sequelize": "^5.21.6",
+    "sequelize-cli": "^5.5.1",
+    "socket.io": "^2.3.0",
+    "sqlite3": "^4.1.1",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@date-io/moment": "^1.3.13",
@@ -36,18 +60,25 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.4",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "@types/supertest": "^2.0.9",
     "@types/validator": "^13.0.0",
+    "@types/yup": "^0.26.35",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "auth0-js": "^9.13.2",
     "clean-webpack-plugin": "^3.0.0",
+    "clsx": "^1.1.0",
     "copyfiles": "^2.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.17.1",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "faker": "^4.1.0",
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "formik": "^2.1.4",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^26.1.0",
     "jest-extended": "^0.11.5",
@@ -59,7 +90,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "socket.io-client": "^2.3.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.1",
     "ts-loader": "^6.2.2",
@@ -68,36 +101,5 @@
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
-  },
-  "dependencies": {
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/yup": "^0.26.35",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "clsx": "^1.1.0",
-    "compression": "^1.7.4",
-    "connect-session-sequelize": "^6.1.1",
-    "cors": "^2.8.4",
-    "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
-    "express-session": "^1.17.0",
-    "formik": "^2.1.4",
-    "jwks-rsa": "^1.7.0",
-    "moment": "^2.22.2",
-    "react-router": "^5.1.2",
-    "sequelize": "^5.21.6",
-    "sequelize-cli": "^5.5.1",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "sqlite3": "^4.1.1",
-    "yup": "^0.28.3"
-  },
-  "resolutions": {
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.3",
-    "@types/react-router-dom": "^5.1.3"
-  },
-  "license": "MIT"
+  }
 }
