--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,5 +7,8 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "alwaysStrict": true
-  }
+  },
+  "exclude": [
+    "./server/src/__tests__"
+  ]
 }
