--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.3.0",
     "sqlite3": "^4.1.1",
+    "use-deep-compare-effect": "^1.3.1",
     "yup": "^0.28.3"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/supertest": "^2.0.9",
+    "@types/use-deep-compare-effect": "^1.3.1",
     "@types/validator": "^13.0.0",
     "@types/yup": "^0.26.35",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
