--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start-server-autoreload": "nodemon server/dist/index.js -w server/dist",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
     "test": "cross-env PORT=3005 jest",
-    "watch-client-js": "npm run build-client-dev -w",
-    "watch-server-js": "npm run build-server-js -w"
+    "watch-client-js": "npm run build-client-dev -- -w",
+    "watch-server-js": "npm run build-server-js -- -w"
   },
   "resolutions": {
     "@types/react": "^16.9.16",
