--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@types/react-router-dom": "^5.1.3"
   },
   "dependencies": {
+    "@types/lodash.groupby": "^4.6.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.1.1",
     "cors": "^2.8.4",
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.0",
     "jwks-rsa": "^1.7.0",
+    "lodash.groupby": "^4.6.0",
     "moment": "^2.22.2",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
