--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@types/react-router-dom": "^5.1.3"
   },
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@react-hook/debounce": "^3.0.0",
+    "@react-pdf/renderer": "^1.6.12",
     "@types/lodash.groupby": "^4.6.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
