Change to in-memory database for testing

--- a/server/src/db/config.json
+++ b/server/src/db/config.json
@@ -6,7 +6,7 @@
   },
   "test": {
     "dialect": "sqlite",
-    "storage": "test-db.sqlite",
+    "storage": ":memory:",
     "logQueryParameters": true
   },
   "production": {
