--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start-server": "node server/dist/index.js",
     "start-server-autoreload": "nodemon server/dist/index.js -w server/dist",
     "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
-    "test": "cross-env PORT=3005 jest",
+    "test": "cross-env PORT=3005 jest --runInBand",
     "watch-client-js": "npm run build-client-dev -- -w",
     "watch-server-js": "npm run build-server-js -- -w"
   },
@@ -63,7 +63,7 @@
     "@types/express": "4.17.6",
     "@types/express-session": "^1.17.0",
     "@types/faker": "^4.1.12",
-    "@types/jest": "^26.0.3",
+    "@types/jest": "^26.0.19",
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -91,7 +91,7 @@
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "formik": "^2.1.4",
     "html-webpack-plugin": "^4.2.0",
-    "jest": "^26.1.0",
+    "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "material-ui-flat-pagination": "^4.1.0",
     "moment-locales-webpack-plugin": "^1.2.0",
@@ -105,7 +105,7 @@
     "react-router-dom": "^5.1.2",
     "socket.io-client": "^2.3.0",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.1",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
