--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.19",
     "@types/node": "^13.11.1",
+    "@types/ramda": "^0.27.34",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router": "^5.1.5",
@@ -98,6 +99,7 @@
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.3",
     "prettier": "^2.0.5",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
