--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start-server-autoreload": "nodemon server/dist/index.js -w server/dist",
     "test": "cross-env PORT=3005 jest",
     "watch-client-js": "npm run build-client-dev -- -w",
-    "watch-server-js": "npm run build-server-js -- -w"
+    "watch-server-js": "npm run build-server-js -- -w --preserveWatchOutput"
   },
   "resolutions": {
     "@types/react": "^16.9.16",
