--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,20 @@
 version: 2.1
+
 orbs:
-  node: circleci/node@3.0.0
+  node: circleci/node@4.1.0
+jobs:
+  test:
+    executor:
+      name: node/default
+      tag: '14.15.3'
+    environment:
+      TZ: America/Bogota
+    steps:
+      - checkout
+      - node/install-packages
+      - run:
+          command: npm test
 workflows:
   node-tests:
     jobs:
-      - node/test
+      - test
