--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,4 +1,5 @@
 server {
+    listen 80 default_server;
     server_name agua.kevinpena.com;
 
     location / {
@@ -11,4 +12,11 @@ server {
     }
 
     client_max_body_size 100m;
+
+    # SSL Setup
+    listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/agua.kevinpena.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/agua.kevinpena.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 }
