--- a/docker/certbot/Dockerfile
+++ b/docker/certbot/Dockerfile
@@ -1,6 +1,4 @@
-FROM alpine:3.14
-
-RUN apk add --no-cache certbot certbot-nginx nginx
+FROM certbot/dns-digitalocean:v1.17.0
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 COPY certbot-cron /etc/crontabs/root
