Upgrade react-pdf@4 and react{-dom}@17

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -8,6 +8,9 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended"
   ],
+  "rules": {
+    "react/react-in-jsx-scope": "off",
+  },
   "parserOptions": {
     "project": [
       "./tsconfig.json"
