--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@react-hook/debounce": "^3.0.0",
-    "@react-pdf/renderer": "^1.6.17",
+    "@react-pdf/renderer": "^4.2.1",
     "@types/lodash.groupby": "^4.6.7",
     "@types/socket.io-parser": "^2.2.1",
     "bcryptjs": "^2.4.3",
@@ -50,6 +50,10 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -79,6 +83,7 @@
     "@typescript-eslint/parser": "^5.59.5",
     "assert": "^2.0.0",
     "auth0-js": "^9.23.2",
+    "babel-loader": "^9.2.1",
     "browserify-zlib": "^0.2.0",
     "clean-webpack-plugin": "^4.0.0",
     "clsx": "^1.2.1",
@@ -102,8 +107,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "ramda": "^0.29.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-number-format": "^4.4.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -111,7 +116,7 @@
     "stream-browserify": "^3.0.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.5.2",
     "typescript": "^5.0.4",
     "umzug": "^2.3.0",
     "util": "^0.12.5",
