--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "build": "babel src -d dist -x .ts,.js --delete-dir-on-start",
     "dev": "node --import tsx --watch --watch-path=src src/index.ts",
     "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
     "migrate": "npm run build && sequelize db:migrate",
     "start": "node dist/index.js",
     "start-dev": "node --import tsx src/index.ts",
