Fix type and lint errors in client

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,10 +3,10 @@
     "jsx": "preserve",
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
 
     "skipLibCheck": true,
-    "strictNullChecks": true,
+    "strictNullChecks": true
   },
   "include": [
       "src/**/*"
