Handle static files on nginx + others
- Handle compression on nginx
- Enable aggressive file caching on static assets
- Self host fonts instead of using a CDN
- Remove the material font icon (wasn't in use)

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,8 @@
-version: '3.8'
-
 services:
   aguasoft:
-    build: .
+    build:
+      context: .
+      target: server
     image: kevinpena/aguasoft:20250221-02
     networks:
       - main
@@ -10,8 +10,8 @@ services:
       - db:/db
   nginx:
     build:
-      context: docker/nginx
-      dockerfile: Dockerfile
+      context: .
+      target: client
     image: kevinpena/nginx:20250221-02
     networks:
       - main
