--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine": "^6.4.3",
@@ -53,12 +54,14 @@
     "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "eslint": "^9.20.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-compiler": "^19.0.0-beta-21e868a-20250216",
     "eslint-plugin-react-hooks": "^5.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^4.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
     "webpack": "^5.82.1",
