--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,13 +2,30 @@ server {
     listen 80 default_server;
     server_name agua.kevinpena.com;
 
+    root /app/public;
+    index index.html;
+
+    gzip on;
+    gzip_types text/html application/javascript application/json text/css image/svg+xml;
+
+    # Server
+    location /api {
+        proxy_pass http://aguasoft:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Client
     location / {
-       proxy_pass http://aguasoft:3000;
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection 'upgrade';
-       proxy_set_header Host $host;
-       proxy_cache_bypass $http_upgrade;
+        try_files $uri /index.html;
+    }
+
+    location ~* \.(?:css|js|jpg|svg|ttf|woff2?)$ {
+        expires 90d;
+        add_header Cache-Control "public";
     }
 
     client_max_body_size 100m;
@@ -21,12 +38,14 @@ server {
     ssl_certificate /etc/letsencrypt/live/agua.kevinpena.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/agua.kevinpena.com/privkey.pem;
 
-        ssl_session_cache shared:le_nginx_SSL:10m;
-        ssl_session_timeout 1440m;
-        ssl_session_tickets off;
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
 
-        ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
 }
+
+# ex:ts=4 et
